Draw multiple plots on UI timeline

--- a/www/src/css/index.scss
+++ b/www/src/css/index.scss
@@ -137,6 +137,10 @@ body {
         text-align: center;
     }
 
+    .timeline-plot {
+        position: absolute;
+    }
+
     .bbox-container {
         position: absolute;
         top: 0;
