[docs] reduce some copy, add border around images

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -199,6 +199,12 @@ div.body code.xref:hover  {
     font-size: 200%;
 }
 
+.round-border-img {
+    border: 1px solid;
+    border-radius: 4px;
+    border-color: #888;
+}
+
 /* navbar */
 
 .navbar-scanner {
